--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <aspectj.version>1.8.10</aspectj.version>
         <allure-junit5.version>2.17.2</allure-junit5.version>
         <allure-maven.version>2.10.0</allure-maven.version>
-        <allure.results.directory>allure-results</allure.results.directory>
+        <allure.results.directory>target/allure-results</allure.results.directory>
         <junit.jupiter.version>5.8.2</junit.jupiter.version>
         <allure.maven.version>2.10.0</allure.maven.version>
         <rest-assured.version>4.4.0</rest-assured.version>
