--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
                     <reportDirectory>${project.build.directory}/allure-reports</reportDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.3.1</version>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
